--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -15,10 +15,15 @@
   }
 
   &__inner {
-    display: flex;
+    display: grid;
     column-gap: 16px;
     align-items: center;
-    justify-content: space-between;
+    grid-template-columns: 1fr auto 1fr;
+
+    @include tablet {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 
   &__overlay-menu-dialog {
@@ -120,6 +125,10 @@
     display: flex;
     column-gap: 10px;
     align-items: center;
+
+    @include tablet-above {
+      justify-content: end;
+    }
   }
 
   &__burger-button {
